# BlankHTTP

./: .clang-format  .gitignore  BlankHttpConfig.cpp  BlankHttpContext.h  BlankHttpMiddleware.cpp  BlankHttpRequestTarget.cpp  BlankHttpResponse.cpp  BlankHttpResponse.h  BlankHttpsClient.hpp  CMakeLists.txt  readme.md  todo
demo/: CMakeLists.txt  demo.cpp
prototype/: BingMainPageHandler.cpp  BingMainPageHandler.h  BingMainPageHandlerII.cpp  BingMainPageHandlerII.h  BlankHttpClient.cpp  BlankHttpClient.h  BlankHttpClient.hpp  BlankHttpConfig.h  BlankHttpContext.cpp  BlankHttpContext.h  BlankHttpDefaultMiddleware.cpp  BlankHttpDefaultMiddleware.h  BlankHttpHandleChain.cpp  BlankHttpHandleChain.h  BlankHttpHandler.cpp  BlankHttpHandler.h  BlankHttpLogger.cpp  BlankHttpLogger.h  BlankHttpMiddleware.cpp  BlankHttpMiddleware.h  BlankHttpRequestTarget.h  BlankHttpRouteTable.cpp  BlankHttpRouteTable.h  BlankHttpRouter.cpp  BlankHttpRouter.h  BlankHttpServer.cpp  BlankHttpServer.h  BlankHttpSession.cpp  BlankHttpSession.h  HelloFileDownloadHandler.cpp  HelloFileDownloadHandler.h  HelloUserHandler.cpp  HelloUserHandler.h  HelloUserRepeatMiddleware.cpp  HelloUserRepeatMiddleware.h  HelloWorldHandler.cpp  HelloWorldHandler.h  main.cpp  makefile
src/: AsyncLogger.cpp  AsyncLogger.h  BlankHttpClient.hpp  BlankHttpClient.ipp  BlankHttpConfig.h  BlankHttpConstant.h  BlankHttpContext.cpp  BlankHttpDefaultMiddleware.h  BlankHttpHandleChain.cpp  BlankHttpHandleChain.h  BlankHttpHandler.cpp  BlankHttpHandler.h  BlankHttpMiddleware.h  BlankHttpRouteTable.h  BlankHttpRouter.cpp  BlankHttpRouter.h  BlankHttpServer.cpp  BlankHttpServer.h  BlankHttpSession.cpp  BlankHttpSession.h  BlankHttpUtility.cpp  BlankHttpsClient.hpp  BlankHttpsClient.ipp  CMakeLists.txt  Client.hpp  Client.ipp  ClientII.hpp  ClientSSL.hpp  ClientSSL.ipp  Config.cpp  Config.h  Constant.h  Context.cpp  Context.h  CoreLogger.cpp  CoreLogger.h  DefaultMiddleware.cpp  DefaultMiddleware.h  HandleChain.cpp  HandleChain.h  (+35 more)
src/boat/: Client.hpp  Config.cpp  Config.h  Constant.h  Server.cpp  Server.h  Utilities.cpp  Utilities.h
src/boat/core/: Context.cpp  Context.h  HandleChain.cpp  HandleChain.h  Handler.cpp  Handler.h  Middleware.cpp  Middleware.h  Request.h  Response.cpp  Response.h  RouteNode.h  Router.cpp  Router.h  Session.cpp  Session.h
src/boat/log/: AsyncLogger.cpp  AsyncLogger.h  LoggerInterface.cpp  LoggerInterface.h  SyncLogger.cpp  SyncLogger.h
